<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="OPTIONS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:textSize="24sp" />

    <CheckBox
        android:text="Notifications on/off"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Notifications"
        android:checked="true" />

    <TextView
        android:text="@string/optionsPartieSon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/optionsPartieSon" />

    <CheckBox
        android:text="@string/optionsSonJoueur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sonJoueur" />

    <CheckBox
        android:text="@string/optionsSonEnvironnement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sonJeu" />

    <TextView
        android:text="@string/optionsPartieLangue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner" />
</LinearLayout>